--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/styles.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mountains+of+Christmas:wght@400;700&display=swap" rel="stylesheet">    
     
     <title>Calendrier de l'avent en JS</title>
 </head>
@@ -22,7 +19,8 @@
         <section></section>
     </main>
 
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/data.js"></script>
+    <script type="module" src="./js/script.js"></script>
     <div id="etoiles"></div>
     <script src="js/particles_js/particles.js"></script>
     <script src="js/particles_js/app_index.js"></script>
