--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 <body>
     <header>
         <h1>Calendrier de l'avent 2024</h1>
-        <!-- <h2>Case 1 à ouvrir</h2>  
-        <div id="particleJS"></div>  -->
+        <!-- <h2>Case 1 à ouvrir</h2>   -->
+        <div id="particleJS"></div>  
     </header>
 
     <main>
         <section></section>
     </main>
-
+    
+    
+    <script src="js/etoiles.js"></script>
     <script type="module" src="./js/data.js"></script>
     <script type="module" src="./js/script.js"></script>
     <div id="etoiles"></div>
     <script src="js/particles_js/particles.js"></script>
-    <script src="js/particles_js/app_index.js"></script>
-    <script src="js/etoiles.js"></script>
+    <script src="js/particles_js/app_index.js"></script>   
 </body>
 </html>
